# Federated-Learning-for-Knowledge-Tracing

./: LICENSE  best_score.py  client.py  combine.py  config.json  create_modek_df.py  model_results.xlsx  plot.py  pyproject.toml  requirements.txt  result.docx  run_models.py  server.py  server_FedMedian.py  server_FedProx.py  server_FedTrimmedAvg.py  server_Krum.py  train.py
federated_learning/: dkt+_ASSIST2009_FL.csv  dkt+_ASSIST2015_FL.csv  dkt_ASSIST2009_FL.csv  dkt_ASSIST2015_FL.csv  dkvmn_ASSIST2009_FL.csv  dkvmn_ASSIST2015_FL.csv  kqn_ASSIST2009_FL.csv  kqn_ASSIST2015_FL.csv  sakt_ASSIST2009_FL.csv  sakt_ASSIST2015_FL.csv
federated_learning_FedMedian/: dkt+_ASSIST2009FL.csv  dkt+_ASSIST2015FL.csv  dkt_ASSIST2009FL.csv  dkt_ASSIST2015FL.csv  dkvmn_ASSIST2009FL.csv  dkvmn_ASSIST2015FL.csv  kqn_ASSIST2009FL.csv  kqn_ASSIST2015FL.csv  sakt_ASSIST2009FL.csv  sakt_ASSIST2015FL.csv
federated_learning_FedProx/: dkt+_ASSIST2009FL.csv  dkt+_ASSIST2015FL.csv  dkt_ASSIST2009FL.csv  dkt_ASSIST2015FL.csv  dkvmn_ASSIST2009FL.csv  dkvmn_ASSIST2015FL.csv  kqn_ASSIST2009FL.csv  kqn_ASSIST2015FL.csv  sakt_ASSIST2009FL.csv  sakt_ASSIST2015FL.csv
federated_learning_FedTrimmedAvg/: dkt+_ASSIST2009FL.csv  dkt+_ASSIST2015FL.csv  dkt_ASSIST2009FL.csv  dkt_ASSIST2015FL.csv  dkvmn_ASSIST2009FL.csv  dkvmn_ASSIST2015FL.csv  kqn_ASSIST2009FL.csv  kqn_ASSIST2015FL.csv  sakt_ASSIST2009FL.csv  sakt_ASSIST2015FL.csv
federated_learning_Krum/: dkt+_ASSIST2009FL.csv  dkt+_ASSIST2015FL.csv  dkt_ASSIST2009FL.csv  dkt_ASSIST2015FL.csv  dkvmn_ASSIST2009FL.csv  dkvmn_ASSIST2015FL.csv  (+4 more)
(+31 files in other folders)
