[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secaggexample"
version = "1.0.0"
description = "Secure Aggregation in Flower"
license = "Apache-2.0"


[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "secaggexample.server_secure:app"
clientapp = "secaggexample.client_secure:app"


[tool.flwr.app.config]
num-server-rounds = 100
fraction-evaluate = 0.5
local-epochs = 5
learning-rate = 0.1
batch-size = 32
# Parameters for the SecAgg+ protocol
num-shares = 3
reconstruction-threshold = 2
max-weight = 9000
timeout = 15.0
# Demo flag
is-demo = true

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 2
options.backend.client-resources.num-cpus = 1 # each ClientApp assumes to use 1 CPU (default is 2)
options.backend.client-resources.num-gpus = 0.25 # each ClientApp uses 25% of VRAM (default is 0.0)